# PicoDevEnv

./: CMakeLists.txt  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
src/: main.c
